[gd_scene load_steps=3 format=3 uid="uid://bkb5i1as1vyfa"]

[ext_resource type="Script" path="res://enemy_spawner.gd" id="1_upvp3"]

[sub_resource type="Curve2D" id="Curve2D_oxl18"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 96, 33.1035, 0, 0, 0, 0, 88, 777.931, 0, 0, 0, 0, 1384, 777.931, 0, 0, 0, 0, 1384, 41.3793, 0, 0, 0, 0, 120, 41.3793)
}
point_count = 5

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_upvp3")

[node name="StartTimer" type="Timer" parent="."]

[node name="EnemyTimer" type="Timer" parent="."]

[node name="MobPath" type="Path2D" parent="."]
position = Vector2(-96, -40)
scale = Vector2(1, 0.966667)
curve = SubResource("Curve2D_oxl18")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2(96, 33.1035)
rotation = 1.58154

[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_enemy_timer_timeout"]
